# gstreamer_practice

./: README.md  rtsp_python.py
les01/: CMakeLists.txt  main.cpp
les02/: CMakeLists.txt  main.cpp
les03/: CMakeLists.txt  main.cpp
les04/: CMakeLists.txt  gst_player.cpp  gst_player.h  main.cpp  player_window.cpp  player_window.h
les04_qt/gstQt/: gstQt.pro  gst_player.cpp  gst_player.h  main.cpp  mainwindow.cpp  mainwindow.h
